--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
             android:label="@string/app_name">
         </activity>
         <activity
+            android:name=".RegisterActivity"
+            android:exported="true"
+            android:label="@string/app_name">
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
