--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".MotionActivity"
+            android:exported="true"
+            android:label="@string/app_name">
+        </activity>
+        <activity
             android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/app_name">
